<resources>
    <string name="app_name">Popular Movies</string>
    <string name="back_drop_poster">Back drop Poster</string>
    <string name="original_title">Original Title: </string>
    <string name="rating">Rating: </string>
    <string name="release_date">Release date :</string>
    <string name="overview">Overview </string>
    <string name="error">Failed to connect.</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
</resources>
