<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailedActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/id_backdrop_poster"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/back_drop_poster"
            android:scaleType="fitXY"
            />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            android:layout_weight="1"
            android:fontFamily="@font/comfortaa"
            android:text="@string/original_title"
            android:textFontWeight="1"
            android:textSize="18sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/id_original_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            android:layout_weight="1"
            android:fontFamily="@font/biorhyme"
            android:textFontWeight="1"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            android:fontFamily="@font/comfortaa"
            android:text="@string/rating"
            android:textFontWeight="1"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/id_rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            android:layout_weight="1"
            android:fontFamily="@font/biorhyme"
            android:textFontWeight="1"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            android:layout_weight="1"
            android:fontFamily="@font/comfortaa"
            android:text="@string/release_date"
            android:textFontWeight="1"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/id_release_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            android:layout_weight="1"
            android:fontFamily="@font/biorhyme"
            android:textFontWeight="1"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            android:layout_weight="1"
            android:fontFamily="@font/comfortaa"
            android:text="@string/overview"
            android:textFontWeight="1"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/id_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            android:layout_weight="1"
            android:fontFamily="@font/biorhyme"
            android:textSize="16sp" />


    </LinearLayout>
</ScrollView>